...
        GridItem(.adaptive(minimum: 44))
    ]

    var body: some View {
        Form {
            Section {
                TextField("Project name", text: $title.onChange(update))
                TextField("Description of this project", text: $detail.onChange(update))
            } header: {
                Text("Basic Settings")
            }

            Section {
...
        )
        .accessibilityLabel(LocalizedStringKey(item))
    }
    #if os(iOS)
    func showAppSettings() {
        guard let settingsUrl = URL(string: UIApplication.openSettingsURLString) else {
            return
        }

        if UIApplication.shared.canOpenURL(settingsUrl) {
            UIApplication.shared.open(settingsUrl)
        }
    }
...
